# pkmn

./: .gitignore  BLAKE_SETUP.md  CLAUDE.md  README.md
data_scraper/: README.md  ps_client.py  pyproject.toml  scrape.py
data_scraper/data/ladders/: gen9vgc2026regi_2026-05-01.json  gen9vgc2026regibo3_2026-05-01.json
data_scraper/data/replays/gen9vgc2026regi/: gen9vgc2026regi-2513034463.json  gen9vgc2026regi-2513055920.json  gen9vgc2026regi-2513056814.json  gen9vgc2026regi-2513058965.json  gen9vgc2026regi-2513158794.json  gen9vgc2026regi-2513162664.json  gen9vgc2026regi-2513163036.json  gen9vgc2026regi-2513181396.json  gen9vgc2026regi-2513192152.json  gen9vgc2026regi-2513201585.json  gen9vgc2026regi-2513212343.json  gen9vgc2026regi-2513222847.json  gen9vgc2026regi-2513249974.json  gen9vgc2026regi-2513370894.json  gen9vgc2026regi-2513763257.json  gen9vgc2026regi-2513767866.json  gen9vgc2026regi-2513772517.json  gen9vgc2026regi-2513774692.json  gen9vgc2026regi-2513775029.json  gen9vgc2026regi-2513780054.json  gen9vgc2026regi-2513793752.json  gen9vgc2026regi-2513796215.json  gen9vgc2026regi-2513818623.json  gen9vgc2026regi-2513821945.json  gen9vgc2026regi-2513826774.json  gen9vgc2026regi-2513828411.json  gen9vgc2026regi-2513839382.json  gen9vgc2026regi-2513840121.json  gen9vgc2026regi-2513847699.json  gen9vgc2026regi-2513849681.json  (+9961 more)
inspector/: README.md  data_loader.py  prompt_parser.py  pyproject.toml  run.sh  server.py
inspector/static/: app.js  index.html  styles.css
pipeline/: README.md  action_extraction.py  audit_corpus.py  bakeoff.py  batch_runner.py  canonical_priors.py  damage_inferencer.py  distill_vgc_context.py  make_eval_split.py  master_pipeline.py  meta_builds.py  prompt_formatting.py  pyproject.toml  replay_parser.py  teacher_anthropic.py  teacher_google.py  teacher_llm.py  teacher_openai.py  team_reconstruction.py  threat_matrix.py  validate_action_legality.py  verify_cot_correctness.py
pipeline/parsed_data_v10sample/: bo1.jsonl
pipeline/teacher/: README.md  __init__.py  anthropic.py  base.py  batch_openai.py  google.py  judge.py  openai.py  synthesis_exemplars.json  vgc_context.md
pipeline/teacher/transcripts/: README.txt
(+13 files in other folders)
