[project]
name = "pkmn-scraper"
version = "0.1.0"
description = "Pokemon Showdown VGC replay scraper for LLM training data"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "tqdm>=4.66",
    "click>=8.1",
]

[project.scripts]
pkmn-scrape = "scrape:cli"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["scrape", "ps_client"]
