[project]
name = "pkmn-pipeline"
version = "0.1.0"
description = "Atomic modules that turn raw replays into SFT-ready conversational training data."
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.9",
    "tqdm>=4.66",
    "click>=8.1",
    "openai>=1.50",
    "anthropic>=0.40",
    "google-genai>=1.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = [
    "replay_parser",
    "canonical_priors",
    "damage_inferencer",
    "threat_matrix",
    "team_reconstruction",
    "action_extraction",
    "prompt_formatting",
    "master_pipeline",
    "bakeoff",
]
packages = ["teacher"]
